[metadata]
name = XStatic-mdi
summary = mdi 1.4.57 (XStatic packaging standard)
description-file = README.rst
maintainer = Diana Whitten
maintainer-email = hurgleburgler@gmail.com
home-page = http://materialdesignicons.com
keywords = material design icons webfont mdi xstatic
license = (same as mdi)
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
