[metadata]
name = XStatic-mdi
description = mdi 1.6.50 (XStatic packaging standard)
description-file = README.rst
maintainer = Rob Cresswell
maintainer-email = robert.cresswell@outlook.com
home-page = http://materialdesignicons.com
keywords = material design icons webfont mdi xstatic
license = SIL OFL 1.1
zip_safe = False
namespace_packages =
    xstatic
    xstatic.pkg

[files]
packages =
    xstatic

[bdist_wheel]
universal = True
